# BasicNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
include/basicnn/: utils.hpp  utils.tpp
include/basicnn/data/: data_loader.hpp  dataset.hpp  dataset.tpp
include/basicnn/linalg/: linalg.hpp  linalg.tpp  matrix.hpp  matrix.tpp
include/basicnn/nn/: functional.hpp  layer.hpp  neural_network.hpp  optimization.hpp  training.hpp
python/: visualization.py
src/: CMakeLists.txt  data_loader.cpp  functional.cpp  layer.cpp  neural_network.cpp  omp_init.cpp  optimization.cpp  training.cpp  utils.cpp
test/: CMakeLists.txt  dataset_tests.cpp  functional_tests.cpp  layer_tests.cpp  linalg_tests.cpp  loader_tests.cpp  matrix_tests.cpp  neural_network_tests.cpp  optimization_tests.cpp  utils_tests.cpp
